--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,8 +3,8 @@
   <p>Generated at <%= Time.now %></p>
   <p>Good Host Reports in the last 30 minutes <%= "#{@good_hosts} / #{@total_hosts}" %> hosts</p>
 
-  <%= graph("pie_3d" ,{:title => "Overview", :data => [@out_of_sync_hosts, @bad_hosts, @good_hosts], 
-            :labels =>["Sync #{@out_of_sync_hosts}","Error - #{@bad_hosts}","OK - #{@good_hosts}"],
+  <%= graph("pie_3d" ,{:title => "Overview", :data => [@out_of_sync_hosts, @bad_hosts, @good_hosts, @active_hosts],
+            :labels =>["Sync #{@out_of_sync_hosts}","Error - #{@bad_hosts}","OK - #{@good_hosts}","Active - #{@active_hosts}"],
               :line_colors => "0000FF,FF0000,00FF00" })
   -%>
 
@@ -14,7 +14,7 @@
           -%>
 
   <h2>Errors</h2>
-  <p>Hosts that had performed modifications <%= link_to @bad_hosts, :action => "errors" %></p>
+  <p>Hosts that had performed modifications <%= link_to @active_hosts, :action => "errors" %></p>
   <p>Out Of Sync Hosts <%= link_to @out_of_sync_hosts, :action => "OutOfSync" %></p>
   <p>Hosts in Error State <%= link_to @bad_hosts, :action => "errors" %></p>
   <p>Reports to Review <%= link_to @intersting_reports, :action => "reports" %></p>
