--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,7 @@
 
   <%= graph("pie_3d" ,{:title => "Overview", :data => [@out_of_sync_hosts, @bad_hosts, @good_hosts, @active_hosts],
             :labels =>["Sync #{@out_of_sync_hosts}","Error - #{@bad_hosts}","OK - #{@good_hosts}","Active - #{@active_hosts}"],
-              :line_colors => "0000FF,FF0000,00FF00" })
+              :line_colors => "0000FF,FF0000,00FF00,41A317" })
   -%>
 
   <%= graph("bar",:title => "Run Distribution in the last 30 minutes", :data =>  @puppet_runs, 
