using size instead of count for arrays

--- a/app/views/hosts/_minilist.html.erb
+++ b/app/views/hosts/_minilist.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% if hosts.count > 0 -%>
+  <% if hosts.size > 0 -%>
     <table class="list">
       <caption> <%= header -%> </caption>
       <tr>
